# pyTRS

./: .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  general_cleanup_changelog.txt  pyproject.toml  readme.md  setup.py
.github/workflows/: pytrs-build.yml
docs/source/: conf.py  index.rst
documentation/: config parameters.txt  config.md  documentation.md  extracting_data.md  flags.html  flags.md  plssPrimer.md  plssdesc.md  quickstart.md  tract.md  trs.md  v0.8.0_api_changelog.txt
documentation/auto-generated docs/: index.html  pyTRS_csv_gui.html  readme.md
documentation/csv_suite documentation/: csv_readme.md
guides/: readme.md
guides/guides/: config.md  examples.md  extracting_data.md  implementations.md  plssdesc.md  quickstart.md  sort_filter_group.md  tract.md  tract_attributes.md  tractlist.md  tractwriter.md  trs.md
pyTRS/: __init__.py  _constants.py
pyTRS/check/: __init__.py  check.py
pyTRS/csv_suite/: __init__.py  pyTRS_parse_csv.py  pyTRS_parse_csv_cmd.py  pyTRS_parse_csv_gui.py
pyTRS/interface_tools/: __init__.py  attrib_popup.py  config_popup.py
pyTRS/parser/: __init__.py  parser.py  regexlib.py
pytrs/: __init__.py  _constants.py  pytrs_csv_gui.pyw
samples/: file_inventory.csv  file_inventory.py
tests/: regex_test.py  test_all.py  test_containers.py  test_plss_and_parse.py  test_plss_preprocess.py  test_plssdesc_and_parse.py  test_preprocess.py  test_preprocess_functions.py  test_regex.py  test_tract_and_parse.py  test_tract_parse.py  test_tract_preprocess.py  test_trs.py  test_unpackers.py  tests.py  tests_readme.md
(+101 files in other folders)
