[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyTRS"
version = "2.2.0"
description = "A library for parsing Public Land Survey System (PLSS) land descriptions."
authors = [
  {name = "James P. Imes", email = "jamesimes@gmail.com"},
]
readme = {file = "readme.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}
keywords = ["PLSS", "survey", "land", "water", "gis"]
dependencies = []

[project.urls]
Homepage = "https://github.com/JamesPImes/pyTRS"
Repository = "https://github.com/JamesPImes/pyTRS.git"
Documentation = "https://pytrs.readthedocs.io/en/latest/index.html"